<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMainChat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_scrn_myapp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:background="@drawable/chat_02"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tvAdminName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          	android:textColor="@color/kesari_color"
          	android:textStyle="bold"
            android:text="Admin:" />
        
        <TextView
            android:id="@+id/tvServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/sender_string" />

        <ImageView
            android:id="@+id/ivServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/content_desc"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnServerDwld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_button_download"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnServerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_button_view"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvServerTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/time"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:visibility="visible"
        android:background="@drawable/abs__dialog_full_holo_light"            
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tvdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
           />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:background="@drawable/chat_01"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible" >
        
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blue_color"
            android:text="Me:" />

        <TextView
            android:id="@+id/tvClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/receiver_string" />

        <ImageView
            android:id="@+id/ivClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/content_desc"/>

        <TextView
            android:id="@+id/tvClientTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/time"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>