<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_scrn_myapp"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tvPlanLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="Top-Up Plan"
            android:textColor="@color/label_black_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDialogPlanName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvPlanLabel"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text=""
            android:textColor="@color/label_black_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_og_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tvOgPlanLabelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/package_plan_price"
            android:textColor="@color/label_black_color" />

        <TextView
            android:id="@+id/tvOgDialogPlanPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=""
            android:textColor="@color/label_black_color" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvDiscountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="You have got  10% discount for online transaction"
        android:textColor="@color/label_red_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editextlayout"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/tvPlanLabelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/plan_price"
            android:textColor="@color/label_black_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDialogPlanPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text=""
            android:textColor="@color/label_black_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="3dp"
            android:background="@color/bg_myapp_common"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/package_updatefrom"
            android:textColor="@color/label_black_color" />

        <RadioGroup
            android:id="@+id/rg_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rbnext"
                style="@style/RadioButtonAppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Schedule to next renewal"
                android:textColor="@color/label_black_color" />

            <RadioButton
                android:id="@+id/rbimmediate"
                style="@style/RadioButtonAppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Immediate Renewal with adjustments"
                android:textColor="@color/label_black_color" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pay now by:"
        android:textColor="@color/label_black_color"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/btn_dialog_pay_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/rl_dialog_netbanking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/speed_after_btn"
            android:padding="8dp" >

            <ImageView
                android:id="@+id/img_netbanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="4dp"
                android:src="@drawable/img_netbanking" />

            <TextView
                android:id="@+id/tv_netbanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_netbanking"
                android:layout_centerHorizontal="true"
                android:text="Net Banking"
                android:textColor="@color/label_white_color"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_dialog_creditdebit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/speed_after_btn"
            android:padding="8dp" >

            <ImageView
                android:id="@+id/img_creditdebit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="4dp"
                android:src="@drawable/img_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_creditdebit"
                android:layout_centerHorizontal="true"
                android:text="Credit/Debit Card"
                android:textColor="@color/label_white_color"
                android:textSize="10.2sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editextlayout"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/topup_note"/>
    </LinearLayout>

</LinearLayout>